--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ input[type=submit] {
 <body id="index">
   <!-- Preloader -->
   <div id="mask" style="display: none;">
-    <div id="loader" style="display: none;"><img src="./arquivos/preloader.gif" alt="preloader"></div>
+    <div id="loader" style="display: none;"><img src="assets/img/preloader.gif" alt="preloader"></div>
   </div>
   <header id="mobileheader" class="navigation-bar-header light visible-xs">
   <div class="container">
@@ -248,27 +248,29 @@ input[type=submit] {
 </section>
 <!-- End Hero Section -->
 <!-- Header -->
-<div class="sticky-wrapper"><header id="header" class="navigation-bar-header light hidden-xs">
-  <div class="container">
-    <nav class="navigation">
-      <div class="navigation-txt visible-xs" data-toggle="dropdown">Home</div>
-      <button class="navigation-toggle visible-xs" type="button" data-toggle="dropdown">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <ul class="navigation-bar navigation-bar-center">
-        <li><a href="#hero">Início</a></li>
-        <li><a href="#about">A conferência</a></li>
-        <li><a href="#schedule">Agenda</a></li>
-        <li><a href="#speakers">Seminaristas</a></li>
-        <li><a href="#projects">Projetos</a></li>
-        <li><a href="#listavip">Seja intercessor</a></li>
-        <li class="featured"><a href="http://www.ibmontesinai.org.br/oferta-online" target="_blank"><i class="fa fa-play-circle"></i>Quero ofertar</a></li>
-      </ul>
-    </nav>
-  </div>
-</header></div>
+<div class="sticky-wrapper">
+  <header id="header" class="navigation-bar-header light hidden-xs">
+    <div class="container">
+      <nav class="navigation">
+        <div class="navigation-txt visible-xs" data-toggle="dropdown">Home</div>
+        <button class="navigation-toggle visible-xs" type="button" data-toggle="dropdown">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <ul class="navigation-bar navigation-bar-center">
+          <li><a href="#hero">Início</a></li>
+          <li><a href="#about">A conferência</a></li>
+          <li><a href="#schedule">Agenda</a></li>
+          <li><a href="#speakers">Seminaristas</a></li>
+          <li><a href="#projects">Projetos</a></li>
+          <li><a href="#listavip">Seja intercessor</a></li>
+          <li class="featured"><a href="http://www.ibmontesinai.org.br/oferta-online" target="_blank"><i class="fa fa-play-circle"></i>Quero ofertar</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+</div>
 <!-- End Header -->
 
 <!-- About Section -->
@@ -862,13 +864,39 @@ input[type=submit] {
 
 <script type="text/javascript" src="assets/js/core151.js"></script>
 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-11561935-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-11561935-1', 'auto');
+  ga('require', 'displayfeatures');
+  ga('send', 'pageview');
+
+</script>
+
 <!--[if lt IE 9]>
 <script type="text/javascript" src="assets/js/jquery-1.11.0.min.js?ver=1"></script>
 <![endif]-->
 <!--[if (gte IE 9) | (!IE)]><!-->
 <script type="text/javascript" src="assets/js/jquery-2.1.0.min.js"></script>
 <!--<![endif]-->
-
 
 <script src="assets/js/main.js" type="text/javascript"></script>
 <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
@@ -887,16 +915,6 @@ input[type=submit] {
 
 <div id="at4-thankyou" class="at4-thankyou at4-thankyou-background at4-hide ats-transparent at4-thankyou-desktop addthis-smartlayers animated fadeIn at4-show" role="dialog" aria-labelledby="at-thankyou-label"><div class="at4lb-inner"><a class="at4x" href="" title="Close"></a><a id="at4-palogo" class="at4-logo" href="http://www.addthis.com/?utm_source=dynpo&utm_medium=img&utm_content=AT_main_WT&utm_campaign=AT_main" title="AddThis" target="_blank">AddThis</a><a id="at4-paprivacy" class="at4-privacy" href="http://www.addthis.com/privacy/privacy-policy" title="Privacy" target="_blank">Privacidade</a><div class="at4-thankyou-inner"><h1 id="at-thankyou-label" class="thankyou-title">Obrigado por compartilhar!</h1><h3 class="thankyou-description"></h3><div class="at4-thankyou-layer"></div></div></div></div> 
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-11561935-1', 'auto');
-  ga('require', 'displayfeatures');
-  ga('send', 'pageview');
-
-</script>
 
 </html>
